[package]
name = "counted-array"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

description = "Macro for declaring fixed-size arrays without counting elements by hand. Supports lazy_static."
homepage = "https://github.com/durka/counted-array"
repository = "https://github.com/durka/counted-array"
readme = "README.md"
license = "MIT"
keywords = ["array", "length", "macro"]

[[bin]]
name = "test_stable"
path = "tests/stable.rs"
[[bin]]
name = "test_nightly"
path = "tests/nightly.rs"

[dependencies]
lazy_static = { version = "0.2", optional = true }

[dev-dependencies]
lazy_static = "0.2"

[features]
nightly = ["lazy_static/nightly"]

